--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link rel="stylesheet" href="/style.css" asp-append-version="true" />
+    <link rel="stylesheet" href="style.css" asp-append-version="true" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
