--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link rel="stylesheet" href="style.css" asp-append-version="true" />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
@@ -31,7 +31,7 @@
               <a class="nav-link" href="#About">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Data/Resume.pdf" download>Resume</a>
+              <a class="nav-link" href="Data/Resume.pdf" download>Resume</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#Project">Project</a>
