--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="Data/icon.png" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -17,6 +17,24 @@
     />
 
     <title>Yeoh Kai Sheng' Resume</title>
+    <style>
+      @media (min-width: 768px) {
+        html {
+          font-size: 16px;
+        }
+      }
+
+      /* Global Styles */
+      body {
+        height: 100%;
+        font-family: "Source Code Pro", monospace;
+        font-size: 12px;
+      }
+
+      body::-webkit-scrollbar {
+        display: none; /* Chrome, Safari, Opera */
+      }
+    </style>
   </head>
 
   <body>
