--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
     <style>
       @media (min-width: 768px) {
         html {
-          font-size: 16px;
+          font-size: 12spx;
         }
       }
 
-      /* Global Styles */
+      html {
+        scroll-behavior: smooth;
+      }
+
       body {
         height: 100%;
         font-family: "Source Code Pro", monospace;
@@ -32,7 +35,28 @@
       }
 
       body::-webkit-scrollbar {
-        display: none; /* Chrome, Safari, Opera */
+        display: none;
+      }
+
+      .navbar,
+      section {
+        opacity: 0;
+        transform: translateY(-20px);
+        transition: opacity 1s ease-out, transform 1s ease-out;
+      }
+
+      .navbar.show,
+      section.show {
+        opacity: 1;
+        transform: translateY(0);
+      }
+
+      img {
+        transition: transform 0.3s ease-in-out;
+      }
+
+      img:hover {
+        transform: scale(1.1);
       }
     </style>
   </head>
@@ -106,7 +130,7 @@
       </div>
     </section>
 
-    <section class="mt-5">
+    <section class="mt-5 fade show">
       <div class="d-flex justify-content-center align-items-center">
         <div class="w-75 d-flex">
           <div
@@ -264,7 +288,7 @@
       </div>
     </section>
 
-    <section id="Project" class="mt-5">
+    <section id="Project" class="mt-5 fade">
       <div class="d-flex justify-content-center align-items-center">
         <div class="w-75 border rounded-4 border-1 p-4">
           <h3 class="mb-3 border-bottom pb-2">
@@ -547,3 +571,22 @@
     ></script>
   </body>
 </html>
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    document.querySelector(".navbar").classList.add("show");
+    const sections = document.querySelectorAll("section");
+
+    const showSection = () => {
+      sections.forEach((section) => {
+        const sectionTop = section.getBoundingClientRect().top;
+        if (sectionTop < window.innerHeight * 0.9) {
+          section.classList.add("show");
+        }
+      });
+    };
+
+    window.addEventListener("scroll", showSection);
+    showSection();
+  });
+</script>
