--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       crossorigin="anonymous"
     />
     <link rel="icon" type="image/png" href="Data/icon.png" />
-    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
@@ -18,12 +17,6 @@
 
     <title>Yeoh Kai Sheng' Resume</title>
     <style>
-      @media (min-width: 768px) {
-        html {
-          font-size: 12spx;
-        }
-      }
-
       html {
         scroll-behavior: smooth;
       }
@@ -34,6 +27,12 @@
         font-size: 12px;
       }
 
+      /* Smaller font for mobile view */
+      @media (max-width: 768px) {
+        body {
+          font-size: 10px; /* or smaller if needed */
+        }
+      }
       body::-webkit-scrollbar {
         display: none;
       }
@@ -137,7 +136,7 @@
             class="col-4 p-4 text-center d-flex flex-column align-items-center justify-content-start border rounded-start-4 border-1 border-end-0"
           >
             <h1><i class="bi bi-wrench-adjustable-circle-fill"></i></h1>
-            <h4>Technical Skill</h4>
+            <h5>Technical Skill</h5>
             <p>
               Passionate about building reliable and user-friendly applications.
               Experienced in full-stack development, desktop apps, and backend
@@ -159,7 +158,7 @@
             class="col-4 p-4 text-center d-flex flex-column align-items-center justify-content-start border border-1"
           >
             <h1><i class="bi bi-person-circle"></i></h1>
-            <h4>Soft Skill</h4>
+            <h5>Soft Skill</h5>
             <p>
               Driven and adaptable team player with excellent interpersonal
               skills and a proactive approach to challenges and collaboration
@@ -175,7 +174,7 @@
             class="col-4 p-4 text-center d-flex flex-column align-items-center justify-content-start border rounded-end-4 border-1 border-start-0"
           >
             <h1><i class="bi bi-translate"></i></h1>
-            <h4>Language</h4>
+            <h5>Language</h5>
             <p>
               Comfortable communicating in multiple languages, which supports
               strong collaboration in multicultural teams
