update projects info

--- a/index.html
+++ b/index.html
@@ -359,10 +359,9 @@
                   </div>
                   <div>
                     <p>
-                      A web-based reporting system to empower non-technical
-                      users to run pre-defined queries across multiple database
-                      with minimal technical support and delivery report through
-                      scheduled triggers.
+                      The first version of DeploymentSQ 2.0 was built with
+                      WinForms, but later transitioned to a web-based platform
+                      to improve performance and accessibility.
                     </p>
                   </div>
                   <div>
@@ -387,10 +386,10 @@
                   </div>
                   <div>
                     <p>
-                      A web-based reporting system to empower non-technical
-                      users to run pre-defined queries across multiple database
-                      with minimal technical support and delivery report through
-                      scheduled triggers.
+                      A console application to assist the support team with
+                      daily Datacon bincode conversion requests. The tool
+                      eliminates human error by using pre-defined bincode
+                      mappings and supports CC schedule restart.
                     </p>
                   </div>
                   <div>
@@ -416,10 +415,11 @@
                   </div>
                   <div>
                     <p>
-                      A web-based reporting system to empower non-technical
-                      users to run pre-defined queries across multiple database
-                      with minimal technical support and delivery report through
-                      scheduled triggers.
+                      A system utility using .NET Framework to automate the
+                      cleanup of local user profiles on Windows systems.
+                      Integrated with the Windows Registry to resolve user SIDs
+                      and invoked native Win32 API (DeleteProfile) for safe
+                      profile deletion.
                     </p>
                   </div>
                   <div>
@@ -444,16 +444,16 @@
                   </div>
                   <div>
                     <p>
-                      A web-based reporting system to empower non-technical
-                      users to run pre-defined queries across multiple database
-                      with minimal technical support and delivery report through
-                      scheduled triggers.
+                      Developed a web-based portfolio system that enables users
+                      to create personalized portfolio websites by simply
+                      entering their resume data. The system offers multiple
+                      pre-designed templates.
                     </p>
                   </div>
                   <div>
                     <strong>Tech Stack: </strong>
-                    <span class="badge bg-primary">.NET Framework</span>
-                    <span class="badge bg-primary">WindowServices</span>
+                    <span class="badge bg-primary">ASP.NET Core MVC</span>
+                    <span class="badge bg-primary">MongoDB</span>
                     <span class="badge bg-primary">C#</span>
                   </div>
                   <div class="mt-2 text-end">
